Revert "Anchor loader pulsar to avoid jumping around"
This reverts commit b63e653acc858f4c4db08d2c77786ff40688a62d.

--- a/mfr/server/static/css/mfr.css
+++ b/mfr/server/static/css/mfr.css
@@ -35,23 +35,6 @@ This CSS was stripped out of base.css from the osf-style repo.
   background-color: #337AB7;
 }
 
-.ball-scale {
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 250px;
-}
-
 .embed-responsive-pdf {
     padding-bottom: 95%;
-}
-
-#mfrIframe iframe {
-    display: none;
-}
-
-#mfrIframe {
-    min-height: 250px;
 }
